# nixie-clock

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  partitions.csv  sdkconfig
components/interface_bme680/: CMakeLists.txt  interface_bme680.c  interface_bme680.h
components/interface_bme68x/: CMakeLists.txt  Kconfig  interface_bme68x.c  interface_bme68x.h
components/interface_ds18b20/: CMakeLists.txt  interface_ds18b20.c  interface_ds18b20.h
components/interface_sht85/: CMakeLists.txt  interface_sht85.c  interface_sht85.h
components/interface_sht85/Sensirion/: sensirion_common.c  sht3x.c
components/interface_sht85/Sensirion/include/: sht3x.h
components/interface_sht85/Sensirion/priv_include/: sensirion_common.h
components/interface_sht85/i2c_bus/: i2c_bus.c  iot_i2c_bus.h
components/leds_light/: CMakeLists.txt  leds_light.c  leds_light.h
components/nixie_display/: CMakeLists.txt  nixie_display.c  nixie_display.h
components/server_homekit/: CMakeLists.txt  Kconfig  server_homekit.c  server_homekit.h  wifi.h
components/shift_registers_driver/: CMakeLists.txt  shift_registers.c  shift_registers.h
components/virtual_sensor/: CMakeLists.txt  virtual_sensor.c  virtual_sensor.h
components/wiring/: CMakeLists.txt  wiring.c  wiring.h
lib/utilities/app_wifi/: CMakeLists.txt  Kconfig.projbuild  app_wifi.c  app_wifi.h
main/: CMakeLists.txt  nixie-clock.c
